# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: local.yaml  production.yaml
migrations/: 20220527145859_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
