[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Luca Palmieri <contact@lpalmieri.com>"]
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.1"
config = "0.11.0"
secrecy = {version = "0.8.0", features = ["serde"] }
# We need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1.0.137", features = ["derive"]}
# • runtime-actix-rustls rells sqlx to use the actix runtime for its futures and rustls
#   as TLS backend;
# • macros gives us access to sqlx::query! and sqlx::query_as!, which we will be using
#   extensively
# • postgres unlocks Postgres-specific functionality (e.g. non-standard SQL types);
# • uuid adds support for mapping SQL UUIDs to the Uuid type from the uuid crate.
#   We need it to work with our id column;
# • chrono adds support for mapping SQL timestamptz to the DateTime<T> type from the
#   chrono crate. We need it to work with our subscribed_at column;
# • migrate gives us access to the same functions used under the hood by sqlx-cli to
#   manage migrations. It will turn out to be useful for our test suite.
serde-aux = { version = "3.0.1", default-features = false, features = [] }
sqlx = { version = "0.5.13", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-actix-web = "0.5.1"
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }

# Dev dependencies are used exclusively when or examples
# They do not get included in the final application binary!
[dev-dependencies]
# once_cell covers both std::sync::Once & std::sync::SyncOnceCell (experimental) usecases
once_cell = "1.12.0"
reqwest = "0.11.10"